Fix finish overflow

--- a/src/pages/Registration/Form/screens/styles.module.scss
+++ b/src/pages/Registration/Form/screens/styles.module.scss
@@ -212,7 +212,11 @@
   flex-direction: column;
   justify-content: space-evenly;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: visible;
+
+  // @media (max-height: 800px) {
+  //   transform: translateY(50px);
+  // }
 
   .logo {
     display: block;
